--- a/20181005_umap.md
+++ b/20181005_umap.md
@@ -6,10 +6,10 @@ October 5, 2018
 Intro
 -----
 
-This is a quick example of applying [UMAP](https://arxiv.org/abs/1802.03426) (as implmented by jlmelville in the [uwot](https://github.com/jlmelville/uwot) package) to mass cytometry data. This is a dataset consisting of healthy bone marrow and leukemic bone marrow profiled using mass cytometry (CYTOF), as decribed in: [Diggins KE, Ferrell PB, & Irish JM (2015) "Methods for discovery and characterization of cell subsets in high dimensional mass cytometry data." Methods 82:55-63.](https://www.sciencedirect.com/science/article/pii/S1046202315001991?via%3Dihub)
+This is a quick example of applying [UMAP](https://arxiv.org/abs/1802.03426) (as implemented by jlmelville in the [uwot](https://github.com/jlmelville/uwot) package) to mass cytometry data. This is a dataset consisting of healthy bone marrow and leukemic bone marrow profiled using mass cytometry (CYTOF), as described in: [Diggins KE, Ferrell PB, & Irish JM (2015) "Methods for discovery and characterization of cell subsets in high dimensional mass cytometry data." Methods 82:55-63.](https://www.sciencedirect.com/science/article/pii/S1046202315001991?via%3Dihub)
 
 ``` r
-## Data avaliable here: https://flowrepository.org/id/FR-FCM-ZZKZ
+## Data available here: https://flowrepository.org/id/FR-FCM-ZZKZ
 ## Dataset = AML_normal_viSNEgates_concat.fcs
 
 mydata <- read_tsv("AML_normal_viSNEgates_concat.fcs_raw_events.txt", 
@@ -47,11 +47,11 @@ ggplot(aes(x= tSNE1, y = tSNE2)) +
 Data Transformation
 -------------------
 
-This next step is key. Before applying umap, or any dimensionality reduction technique, the data must be transformed with a log like transformation. For Flow cytometry, we usually use an arcsinh transformation with a cofactor of 150. The arcsinh transformation approximates a ln(x) transformation for large values, but become linear near 0. It's also valid for negative numbers which is good for flow cytometry data where compensation can result in values below 0. The cofactor controls where the transformation transitions from linear to log like. If the cofactor is set in approriately, it can result in a the false appearnce of a bimodal distrubtion around 0 (cofactor too low), or it can compress the area around zero excessively and eliminate real signal (cofactor set too high). For more information, see this page on ["Scales and Transformation"](https://my.vanderbilt.edu/irishlab/protocols/scales-and-transformation/)
+This next step is key. Before applying UMAP, or any dimensionality reduction technique, the data must be transformed with a log like transformation. For flow cytometry, we usually use an arcsinh transformation with a cofactor of 150. The arcsinh (hyperbolic arc-sine) transformation approximates a ln(x) transformation for large values, but becomes linear near 0. It's also valid for negative numbers which is good for flow cytometry data where compensation can result in values below 0. The cofactor controls where the transformation transitions from linear to log-like. If the cofactor is set inappropriately, it can result in a the false appearance of a bimodal distribution around 0 (cofactor too low, also see [this link](https://www.ncbi.nlm.nih.gov/pubmed/29451717)), or it can compress the area around zero excessively and eliminate real signal (cofactor set too high). For more information, see this page on ["Scales and Transformation"](https://my.vanderbilt.edu/irishlab/protocols/scales-and-transformation/)
 
-We'll set the cofactor to 5 here. I'll also leave the data untransformed to comapre what happens when this set is ommitted.
+We'll set the cofactor to 5 here. I'll also leave the data untransformed to compare what happens when this set is omitted.
 
-Another brief note is that in the original analysis, a subset of the channels (features) were used to generate the tSNE map. Those channels have a '(V)' in their name, so we'll select the same channels for the UMAP analyis as well.
+Another brief note is that in the original analysis, a subset of the channels (features) were used to generate the tSNE map. Those channels have a '(V)' in their name, so we'll select the same channels for the UMAP analysis as well.
 
 ``` r
 mydata.mapping <- mydata %>%
@@ -63,7 +63,7 @@ mydata.mapping.untransformed <- mydata %>%
   select(contains('(V)'))
 ```
 
-Now we'll run UMAP on both the transformed and untransformed data, as well as tUMAP. My understanding of tUMAP is that it sets two of the hyperparameters to 1, which apporximates the Cauchy distribution used in tSNE. This speeds up the optimization and also has the side effect of spreading out the clusters a bit more than a comparable umap with the same `n_neighbors` and `min_dist` parameters. For more about tUMAP see the [documentation for uwot](https://github.com/jlmelville/uwot).
+Now we'll run UMAP on both the transformed and untransformed data, as well as tUMAP. My understanding of tUMAP is that it sets two of the hyperparameters to 1, which apporximates the Cauchy distribution used in tSNE. This speeds up the optimization and also has the side effect of spreading out the clusters a bit more than a comparable UMAP with the same `n_neighbors` and `min_dist` parameters. For more about tUMAP see the [documentation for uwot](https://github.com/jlmelville/uwot).
 
 ``` r
 myumap <- umap(mydata.mapping, ret_model = TRUE)
