--- a/20181005_umap.md
+++ b/20181005_umap.md
@@ -6,10 +6,12 @@ October 5, 2018
 Intro
 -----
 
-This is a quick example of applying [UMAP](https://arxiv.org/abs/1802.03426) (as implemented by jlmelville in the [uwot](https://github.com/jlmelville/uwot) package) to mass cytometry data. This is a dataset consisting of healthy bone marrow and leukemic bone marrow profiled using mass cytometry (CYTOF), as described in: [Diggins KE, Ferrell PB, & Irish JM (2015) "Methods for discovery and characterization of cell subsets in high dimensional mass cytometry data." Methods 82:55-63.](https://www.sciencedirect.com/science/article/pii/S1046202315001991?via%3Dihub)
+This is a quick example of applying Leland McInnes' [UMAP](https://arxiv.org/abs/1802.03426) (as implemented by jlmelville in the [uwot](https://github.com/jlmelville/uwot) package) to mass cytometry data. This is a dataset consisting of healthy bone marrow and leukemic bone marrow profiled using mass cytometry (CYTOF), as described in: [Diggins KE, Ferrell PB, & Irish JM (2015) "Methods for discovery and characterization of cell subsets in high dimensional mass cytometry data." Methods 82:55-63.](https://www.sciencedirect.com/science/article/pii/S1046202315001991?via%3Dihub)
 
 ``` r
-## Data available here: https://flowrepository.org/id/FR-FCM-ZZKZ
+library(tidyverse)
+library(uwot)
+## Data avaliable here: https://flowrepository.org/id/FR-FCM-ZZKZ
 ## Dataset = AML_normal_viSNEgates_concat.fcs
 
 mydata <- read_tsv("AML_normal_viSNEgates_concat.fcs_raw_events.txt", 
@@ -37,8 +39,8 @@ ggplot(aes(x= tSNE1, y = tSNE2)) +
   scale_x_continuous(expand = c(0.1,0)) + 
   scale_y_continuous(expand = c(0.1,0)) + 
   coord_fixed() +
-  labs(caption = "From KE Diggins, PB Ferrell,JM Irish,
-       Methods 2015, 82, 55-63.\nFlow Repository: FR-FCM-ZZKZ") + 
+  labs(caption="From KE Diggins, PB Ferrell, JM Irish, Methods 2015, 82, 55-63.
+       Flow Repository: FR-FCM-ZZKZ") + 
   theme_minimal()
 ```
 
@@ -47,7 +49,7 @@ ggplot(aes(x= tSNE1, y = tSNE2)) +
 Data Transformation
 -------------------
 
-This next step is key. Before applying UMAP, or any dimensionality reduction technique, the data must be transformed with a log like transformation. For flow cytometry, we usually use an arcsinh transformation with a cofactor of 150. The arcsinh (hyperbolic arc-sine) transformation approximates a ln(x) transformation for large values, but becomes linear near 0. It's also valid for negative numbers which is good for flow cytometry data where compensation can result in values below 0. The cofactor controls where the transformation transitions from linear to log-like. If the cofactor is set inappropriately, it can result in a the false appearance of a bimodal distribution around 0 (cofactor too low, also see [this link](https://www.ncbi.nlm.nih.gov/pubmed/29451717)), or it can compress the area around zero excessively and eliminate real signal (cofactor set too high). For more information, see this page on ["Scales and Transformation"](https://my.vanderbilt.edu/irishlab/protocols/scales-and-transformation/)
+This next step is key. Before applying UMAP, or any dimensionality reduction technique, the data must be transformed with a log like transformation which serves as a variance stabilizing transformation. For Flow cytometry, we usually use an arcsinh transformation with a cofactor of 150. The arcsinh transformation approximates a ln(x) transformation for large values, but become linear near 0. It's also valid for negative numbers which is good for flow cytometry data where compensation can result in values below 0. The cofactor controls where the transformation transitions from linear to log like. If the cofactor is set in appropriately, it can result in a the false appearance of a bimodal distribution around 0 (cofactor too low), or it can compress the area around zero excessively and eliminate real signal (cofactor set too high). For more information, see this page on ["Scales and Transformation"](https://my.vanderbilt.edu/irishlab/protocols/scales-and-transformation/), as well as the documentation for Ariful Azad's [flowVS](https://bioconductor.org/packages/release/bioc/html/flowVS.html) package.
 
 We'll set the cofactor to 5 here. I'll also leave the data untransformed to compare what happens when this set is omitted.
 
@@ -63,7 +65,10 @@ mydata.mapping.untransformed <- mydata %>%
   select(contains('(V)'))
 ```
 
-Now we'll run UMAP on both the transformed and untransformed data, as well as tUMAP. My understanding of tUMAP is that it sets two of the hyperparameters to 1, which apporximates the Cauchy distribution used in tSNE. This speeds up the optimization and also has the side effect of spreading out the clusters a bit more than a comparable UMAP with the same `n_neighbors` and `min_dist` parameters. For more about tUMAP see the [documentation for uwot](https://github.com/jlmelville/uwot).
+Running UMAP
+------------
+
+Now we'll run UMAP on both the transformed and untransformed data, as well as tUMAP. My understanding of tUMAP is that it sets two of the hyperparameters to 1, which approximates the Cauchy distribution used in tSNE. This speeds up the optimization and also has the side effect of spreading out the clusters a bit more than a comparable UMAP with the same `n_neighbors` and `min_dist` parameters. For more about tUMAP see the [documentation for uwot](https://github.com/jlmelville/uwot).
 
 ``` r
 myumap <- umap(mydata.mapping, ret_model = TRUE)
@@ -82,8 +87,8 @@ ggplot(aes(x= V1, y = V2)) +
        y = "UMAP-2", 
        title = "UMAP on asinh transformed data") + 
   coord_fixed() +
-  labs(caption = "From KE Diggins, PB Ferrell, JM Irish,
-       Methods 2015, 82, 55-63.\nFlow Repository: FR-FCM-ZZKZ") + 
+  labs(caption="From KE Diggins, PB Ferrell, JM Irish, Methods 2015, 82, 55-63.
+       Flow Repository: FR-FCM-ZZKZ") + 
   theme_minimal()
 ```
 
@@ -100,8 +105,8 @@ ggplot(aes(x= V1, y = V2)) +
        y = "tUMAP-2", 
        title = "tUMAP on asinh transformed data") + 
   coord_fixed() +
-  labs(caption = "From KE Diggins, PB Ferrell, JM Irish,
-       Methods 2015, 82, 55-63.\nFlow Repository: FR-FCM-ZZKZ") + 
+  labs(caption="From KE Diggins, PB Ferrell, JM Irish, Methods 2015, 82, 55-63.
+       Flow Repository: FR-FCM-ZZKZ") + 
   theme_minimal()
 ```
 
@@ -118,8 +123,8 @@ ggplot(aes(x= V1, y = V2)) +
        y = "UMAP-2", 
        title = "UMAP on untransformed data") + 
   coord_fixed() +
-  labs(caption = "From KE Diggins, PB Ferrell, JM Irish,
-       Methods 2015, 82, 55-63.\nFlow Repository: FR-FCM-ZZKZ") + 
+  labs(caption="From KE Diggins, PB Ferrell, JM Irish, Methods 2015, 82, 55-63.
+       Flow Repository: FR-FCM-ZZKZ") + 
   theme_minimal()
 ```
 
